# multilingual-analysis

./: .gitignore  README.md  gitignore.txt  pyproject.toml  requirements.txt
src/multilingual_analysis/: README.md  __init__.py  requirement.txt
src/multilingual_analysis/layers/: calculate_stats.py  layer_distributions.py  plotting.py  prompts.py  test_layer.py
src/multilingual_analysis/layers/transformers/generation/: utils.py
src/multilingual_analysis/layers/transformers_changed/models/: modeling_bloom.py  modeling_llama.py  modeling_qwen2.py
src/multilingual_analysis/neuron_deactivate/: test_mistral_gsm.py
src/multilingual_analysis/neuron_deactivate/transformers/generation/: __init__.py  beam_constraints.py  beam_search.py  candidate_generator.py  configuration_utils.py  flax_utils.py  logits_process.py  stopping_criteria.py  streamers.py  tf_utils.py  utils.py
src/multilingual_analysis/neuron_deactivate/transformers/models/gemma2/: __init__.py  convert_gemma2_weights_to_hf.py  diff_gemma2.py  modeling_gemma2.py
src/multilingual_analysis/neuron_deactivate/transformers/models/llama/: configuration_llama.py  convert_llama_weights_to_hf.py  modeling_llama.py  tokenization_llama.py  tokenization_llama_fast.py
src/multilingual_analysis/neuron_detection/: neuron_detection.py
src/multilingual_analysis/neuron_detection/transformers/generation/: beam_constraints.py  candidate_generator.py  configuration_utils.py  flax_logits_process.py  logits_process.py  stopping_criteria.py  tf_logits_process.py  utils.py  watermarking.py
src/multilingual_analysis/neuron_enhancement/: train_neuron.py
src/multilingual_analysis/neuron_enhancement/transformers/: trainer.py
(+18 files in other folders)
