[project]
name = "multilingual-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matthias Uhlig", email = "matthias.uhlig@aol.de" }
]
dependencies = [
    "pandas>=2.2.3",
    "datasets>=3.2.0",
    "torch>=2.5.1",
    "tenacity>=9.0.0",
    "requests>=2.32.3",
    "transformers>=4.47.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multilingual_analysis"]
