[project]
name = "multilingual-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matthias Uhlig", email = "" }
]
dependencies = [
    "pandas>=2.2.3",
    "datasets>=3.2.0",
    "torch>=2.5.1",
    "tenacity>=9.0.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "numpy==1.26.4",
    "langdetect>=1.0.9",
    "accelerate>=1.2.1",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.2",
    "fast-langdetect>=0.2.2",
    "huggingface-hub[hf-transfer]>=0.27.0",
    "loguru>=0.7.3",
    "transformers",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multilingual_analysis"]

[tool.uv.sources]
transformers = { git = "https://github.com/DRXD1000/transformers" }
